--- a/UFO-Level-2/u2_index.html
+++ b/UFO-Level-2/u2_index.html
@@ -23,7 +23,7 @@
     </nav>
     <div class="hero text-center">
       <h1>UFO Sightings</h1>
-      <p>Seeing is Beleiving!</p>
+      <p>Seeing is Believing!</p>
     </div>
     <div class="container">
       <div class="row margin-top-50">
